# ShSerial

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  travis.yml
.ShCI/: linux-log.md  windows-log.md
.shci/linux/: build.sh
.shci/windows/: build-output.txt  build.bat  log.md
ShSerial/include/: ShSerial.h
ShSerial/src/: ShSerial.c
ShSerial/src/shserial/: shSerial.c
ShSerialExample/src/: ShSerialExample.c
fggSerial/include/: fggSerial.h
fggSerial/src/: fggSerial.c
fggSerialExample/src/: fggSerialExample.c
fggUART/include/: fggSerial.h  fggUART.h
fggUART/src/: fggSerial.c  fggUART.c
logger/src/: logger.c
shserial/include/shserial/: shSerial.h
shserial/src/shserial/: shSerial.c
